# grindx

./: .gitignore  README.md  app.py  data.py  pyproject.toml  serve.py
.github/workflows/: publish.yml
enriched/: dp_problems.json
grindx/: __init__.py  __main__.py  ai.py  app.py  clipboard.py  data.py  judge.py  runtime_check.py
grindx/catalog/: TESTCASE_COUNTS.md  topics.json
grindx/problems/: arrays.json  backtracking.json  basics.json  binary-search.json  bit-manipulation.json  dynamic-programming.json  graphs.json  greedy.json  heaps.json  intervals.json  linked-list.json  math-geometry.json  sliding-window.json  sorting.json  stacks-queues.json  strings.json  trees.json  tries.json  two-pointers.json
grindx/screens/: __init__.py  browser.py  evaluate.py  solve.py  stats.py  test_result.py  welcome.py
grindx/testcases/: lru-cache.json  maximum-depth-of-binary-tree.json  reverse-linked-list.json  rotate-array.json  two-sum.json
grindx/widgets/: editor.py  items.py
problems/: arrays.json  backtracking.json  basics.json  binary-search.json  bit-manipulation.json  dynamic-programming.json  graphs.json  greedy.json  heaps.json  intervals.json  linked-list.json  math-geometry.json  sorting.json  stacks-queues.json  strings.json  trees.json  tries.json  two-pointers.json
screens/: __init__.py  browser.py  solve.py  stats.py  welcome.py
scripts/: restructure.py
sheets/: blind-75.json  grind-75.json  neetcode-150.json  striver-a2z.json
tests/: test_catalog_migration.py  test_testcase_bundle_fetch.py
widgets/: __init__.py  editor.py  items.py
(+2265 files in other folders)
